--- a/REST/package.json
+++ b/REST/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "mongoose": "^4.10.8"
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^4.10.8",
+    "morgan": "^1.8.2"
   }
 }
